welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if (temp >= 60){
  ^